--- a/Assignment+2.ipynb
+++ b/Assignment+2.ipynb
@@ -771,7 +771,7 @@
     "def answer_six():\n",
     "    counties_df = census_df[census_df['SUMLEV'] == 50]\n",
     "    top_counties_df = counties_df.sort_values(by=['STNAME','CENSUS2010POP'],ascending=False).groupby('STNAME').head(3)\n",
-    "    ans = top_counties_df.groupby('STNAME').sum().sort_values(by='CENSUS2010POP').head(3).index.tolist()\n",
+    "    ans = top_counties_df.groupby('STNAME').sum().sort_values(by='CENSUS2010POP',ascending= False).head(3).index.tolist()\n",
     "    return ans\n",
     "answer_six()"
    ]
